--- a/css/style.css
+++ b/css/style.css
@@ -342,9 +342,47 @@ background-color: #FFBB01;
     color: #A5A5A5;
     display: inline-block;
     margin-top: 72px;
+    cursor: pointer;
 }
 
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 187, 1, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
+  .modal__block {
+    background-color: #20202d;
+    padding: 30px;
+    max-width: 600px;
+    margin: 30px;
+    position: relative;
+  }
+
+  .modal__close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    background-color: transparent;
+    border-color: transparent;
+    font-size: 24px;
+    line-height: 24px;
+    color: white;
+    cursor: pointer;
+  }
+  .modal__close:hover {
+    color: #FFBB01;
+  }
+
+   .hide {
+    display: none;
+  } 
 
 
 /* media */
