--- a/css/style.css
+++ b/css/style.css
@@ -741,7 +741,6 @@ blockquote p {
 .text-block {
     height: 98px;
     overflow: hidden;
-    padding: 5px 10px;
     font-size: 14px;
 }
 
@@ -796,14 +795,12 @@ blockquote p {
         font-size: 70px;
         font-weight: 700;
         flex-wrap: wrap;
-        /* flex-basis: 20%; */
     }
     .other-skills {
         width: 260px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        /* flex-basis: 50%; */
         flex-wrap: wrap;
     }
 }
@@ -933,18 +930,6 @@ blockquote p {
     .direction-r .desc {
         margin: 1em 0 0 0.75em;
     }
-    /*  .first-skills {
-        flex-basis: 50%;
-        flex-wrap: wrap;
-    }
-    .other-skills {
-        flex-basis: 40%;
-        flex-wrap: wrap;
-    }
-    .plus {
-        flex-basis: 10%;
-        flex-wrap: wrap;
-    } */
 }
 
 @media (max-width: 564px) {
@@ -988,6 +973,9 @@ blockquote p {
     .features-text {
         font-size: 14px;
         line-height: 28px;
+    }
+    .project-image {
+        width: 288px;
     }
     .project-title {
         font-size: 18px;
@@ -1055,13 +1043,14 @@ blockquote p {
     }
     .other-skills {
         margin-left: 0;
+        justify-content: space-around;
     }
     .back {
         justify-content: start;
     }
     .modal__block {
         background-color: #20202d;
-        padding: 35px;
+        padding: 60px 30px 30px;
         max-width: 600px;
         margin: 30px;
         position: relative;
