--- a/css/style.css
+++ b/css/style.css
@@ -716,6 +716,7 @@ blockquote p {
     max-width: 600px;
     margin: 30px;
     position: relative;
+    font-size: 14px;
 }
 
 .modal__close {
@@ -741,12 +742,11 @@ blockquote p {
 .text-block {
     height: 98px;
     overflow: hidden;
-    font-size: 14px;
     transition: 1s;
 }
 
 .text-block:hover {
-    height: 230px;
+    height: 200px;
     cursor: pointer;
     transition: 1s;
 }
@@ -934,6 +934,12 @@ blockquote p {
     }
 }
 
+@media (max-width: 636px) {
+    .text-block:hover {
+        height: 250px;
+    }
+}
+
 @media (max-width: 564px) {
     .hero {
         padding-bottom: 75px;
@@ -1058,15 +1064,36 @@ blockquote p {
         position: relative;
         font-size: 12px;
     }
-    .text-block {
+    .modal__block {
         font-size: 12px;
     }
     .block {
         width: 288px;
     }
+    .text-block:hover {
+        height: 190px;
+    }
 }
 
-@media (max-width: 435px) {
+@media (max-width: 522px) {
+    .text-block:hover {
+        height: 220px;
+    }
+}
+
+@media (max-width: 461px) {
+    .text-block:hover {
+        height: 250px;
+    }
+}
+
+@media (max-width: 406px) {
+    .text-block:hover {
+        height: 290px;
+    }
+}
+
+@media (max-width: 360px) {
     .text-block:hover {
         height: 360px;
     }
