--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
     border: 5px solid #FFBB01;
 }
 
+
 /* skills */
 
 .first-skills {
@@ -203,6 +204,7 @@ body {
     justify-content: space-between;
     align-items: center;
 }
+
 
 /* timeline */
 
@@ -301,7 +303,8 @@ body {
     bottom: -4px;
 }
 
-.direction-l, .direction-r {
+.direction-l,
+.direction-r {
     float: none;
     width: 100%;
     text-align: center;
@@ -333,7 +336,8 @@ body {
     color: #FFBB01;
 }
 
-.direction-l .flag:after, .direction-r .flag:after {
+.direction-l .flag:after,
+.direction-r .flag:after {
     content: "";
     position: absolute;
     left: 50%;
@@ -393,12 +397,14 @@ body {
     z-index: 15;
 }
 
-.direction-l .desc, .direction-r .desc {
+.direction-l .desc,
+.direction-r .desc {
     position: relative;
     margin: 1em 1em 0 1em;
     padding: 1em;
     z-index: 15;
 }
+
 
 /* features */
 
@@ -429,6 +435,7 @@ body {
     margin: 0;
 }
 
+
 /* answer */
 
 .answer {
@@ -445,12 +452,13 @@ blockquote {
     font-family: 'Lato', sans-serif;
 }
 
-blockquote p {
-    margin: 0 0 16px;
-    font-size: 20px;
+.blockquote_text {
+    margin: auto;
+    font-size: 18px;
     letter-spacing: .05em;
     line-height: 1.4;
 }
+
 
 /* projects */
 
@@ -488,7 +496,8 @@ blockquote p {
     margin-bottom: 44px;
 }
 
-.progect-time, .project-feedback {
+.progect-time,
+.project-feedback {
     display: flex;
     align-items: flex-start;
 }
@@ -571,6 +580,7 @@ blockquote p {
     color: white;
 }
 
+
 /* contacts */
 
 .contacts-form {
@@ -642,7 +652,9 @@ blockquote p {
     justify-content: space-between
 }
 
-.contacts-phone, .contacts-mail, .social-links {
+.contacts-phone,
+.contacts-mail,
+.social-links {
     flex-basis: 25%;
     margin-bottom: 53px;
 }
@@ -864,8 +876,8 @@ blockquote p {
     background: rgba(14, 13, 13, 0.7);
     display: none;
     margin-bottom: 182px;
-	min-height: 250px;
-	max-height: 251px;
+    min-height: 250px;
+    max-height: 251px;
 }
 
 .card-block-poster {
@@ -887,6 +899,7 @@ blockquote p {
 #upbutton:hover {
     transform: scale(1.04);
 }
+
 
 /* media */
 
@@ -1137,7 +1150,8 @@ blockquote p {
         font-size: 18px;
         line-height: 150%;
     }
-    .progect-time, .project-feedback {
+    .progect-time,
+    .project-feedback {
         flex-basis: 100%;
         margin-bottom: 30px;
     }
@@ -1155,7 +1169,8 @@ blockquote p {
     .form-button {
         font-size: 10px;
     }
-    .contacts-phone, .contacts-mail {
+    .contacts-phone,
+    .contacts-mail {
         flex-basis: 100%;
         margin-bottom: 30px;
     }
