--- a/css/style.css
+++ b/css/style.css
@@ -399,33 +399,111 @@ body {
 }
 
 
-/* features */
+/* work-process*/
 
-.features {
+.work-process {
     background-color: rgb(0, 0, 0);
 }
 
-.features-block {
+.work-process-block {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.features-item {
+.work-process-item-title {
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    margin: 0 auto 5px;
+}
+
+.work-process-item-title-first {
+    margin: auto auto;
+}
+
+.work-process-item {
+    border: 2px solid #FFBB01;
+    position: relative;
+    border-radius: 10px;
+    min-height: 162px;
+    padding: 15px;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    margin: 0px 0px 30px;
     flex-basis: 30%;
-    margin-bottom: 63px;
+    flex-direction: column;
 }
 
-.features-image {
-    display: block;
-    margin-bottom: 22px;
+.work-process-item-double {
+    flex-basis: 65%;
+    flex-direction: row;
+    align-items: flex-start;
 }
 
-.features-text {
-    font-weight: normal;
-    font-size: 16px;
+.item-double {
+    display: flex;
+    flex-direction: column;
+}
+
+.work-process-item:before {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    border-radius: 40px;
+    background: #000;
+    color: #FFBB01;
+    border: 2px solid #FFBB01;
+    left: -18px;
+    top: calc(50% - 18px);
     line-height: 28px;
-    margin: 0;
+    font-weight: 500;
+}
+
+.work-process-item:first-child:before {
+    content: "1";
+}
+
+.work-process-item:nth-child(2):before {
+    content: "2";
+}
+
+.work-process-item:nth-child(3):before {
+    content: "3";
+}
+
+.work-process-item:nth-child(4):before {
+    content: "4";
+}
+
+.work-process-item:nth-child(5):before {
+    content: "5";
+}
+
+.work-process-item:not(:last-child):after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: rgba(255, 0, 0, 0) transparent hsla(0, 0%, 100%, 0) rgb(0, 0, 0);
+    border-style: solid;
+    border-width: 15px;
+    -webkit-filter: drop-shadow(3px 0 0 #FFBB01);
+    filter: drop-shadow(3px 0 0 #FFBB01);
+    right: -28px;
+    top: calc(50% - 18px);
+    font-weight: 500;
+}
+
+.work-process-item-ul {
+    padding-left: 30px;
+}
+
+.work-process-item-ul li {
+    margin-bottom: 10px;
 }
 
 
@@ -973,9 +1051,6 @@ blockquote {
         order: 1;
         text-align: center;
     }
-    .features-item {
-        flex-basis: 45%;
-    }
     .projects-slide {
         flex-direction: column;
     }
@@ -1097,6 +1172,12 @@ blockquote {
         display: flex;
         flex-direction: column;
     }
+    .work-process-item {
+        flex-basis: 100%;
+    }
+    .work-process-item-double {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 564px) {
@@ -1123,7 +1204,7 @@ blockquote {
         margin-bottom: 0;
     }
     .section {
-        padding: 60px 0;
+        padding: 40px 0;
     }
     .hero-title {
         font-size: 19px;
@@ -1140,14 +1221,6 @@ blockquote {
     }
     .footer-social-links {
         margin-bottom: 30px;
-    }
-    .features-item {
-        flex-basis: 100%;
-        margin-bottom: 30px;
-    }
-    .features-text {
-        font-size: 14px;
-        line-height: 28px;
     }
     .flex-cont {
         margin-bottom: 60px;
