--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,42 @@ blockquote {
 
 /* projects */
 
+.filterDiv {
+    display: none !important;
+}
+
+.show {
+    display: block !important;
+}
+
+#myBtnContainer {
+    margin-bottom: 20px;
+}
+
+.filter-btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    cursor: pointer;
+    color: white;
+    background-color: transparent;
+    min-width: 120px;
+    margin-right: 20px;
+    font-size: 20px;
+}
+
+.filter-btn:hover {
+    border-bottom: 2px solid #FFBB01;
+}
+
+.filter-btn.active {
+    background-color: transparent;
+    color: white;
+    border: 2px solid #FFBB01;
+    border-radius: 25px;
+    min-width: 120px;
+}
+
 .projects {
     background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 17.44%);
 }
