--- a/css/style.css
+++ b/css/style.css
@@ -1197,6 +1197,13 @@ blockquote {
 }
 
 @media (max-width: 636px) {
+    .card-title {
+        min-height: 0px;
+    }
+    .section-title {
+        font-size: 25px;
+        margin-bottom: 20px;
+    }
     .text-block:hover {
         height: 250px;
     }
@@ -1217,11 +1224,22 @@ blockquote {
     .work-process-item-double {
         flex-direction: column;
     }
+    .filter-btn {
+        margin-right: 0px;
+        font-size: 14px;
+        min-width: 90px;
+    }
+    .filter-btn.active {
+        min-width: 90px;
+    }
+    .blockquote_ul {
+        padding-left: 0px;
+    }
 }
 
 @media (max-width: 564px) {
     .hero {
-        padding-bottom: 75px;
+        padding-bottom: 50px;
     }
     .hero-avatar {
         width: 113px;
@@ -1233,7 +1251,7 @@ blockquote {
         margin-bottom: 38px;
     }
     .hero-title {
-        font-size: 24px;
+        font-size: 25px;
         line-height: 28px;
         margin-bottom: 4px;
     }
@@ -1244,10 +1262,6 @@ blockquote {
     }
     .section {
         padding: 40px 0;
-    }
-    .hero-title {
-        font-size: 19px;
-        line-height: 22px;
     }
     .hero-header-social {
         flex-direction: column;
@@ -1263,9 +1277,6 @@ blockquote {
     }
     .flex-cont {
         margin-bottom: 60px;
-    }
-    .blockquote_text {
-        font-size: 16px;
     }
     .project-image {
         width: 288px;
